erDiagram
    User {
        string id PK
        string email
        string displayName
        string cognitoSub UK
        datetime createdAt
        datetime updatedAt
    }

    PhotoSpace {
        string id PK
        string name
        string description
        boolean isPrivate
        datetime createdAt
        datetime updatedAt
    }

    PhotoSpaceMember {
        string id PK
        string spaceId FK
        string userId FK
        enum role
        datetime createdAt
        datetime updatedAt
    }

    PhotoAlbum {
        string id PK
        string title
        string description
        string spaceId FK
        datetime createdAt
        datetime updatedAt
    }

    Photo {
        string id PK
        string title
        string description
        string storagePath
        string sourceFilename
        string mimeType
        int fileSizeBytes
        int imageWidth
        int imageHeight
        json imageMetadata
        string createdById FK
        datetime createdAt
        datetime updatedAt
    }

    User ||--o{ PhotoSpaceMember : "has"
    PhotoSpace ||--o{ PhotoSpaceMember : "has"
    PhotoSpace ||--o{ PhotoAlbum : "has"
    PhotoSpaceMember ||--o{ Photo : "creates"
    PhotoAlbum ||--o{ Photo : "contains"